Bug 484012 - Compact View mode has a wrong layout in RTL mode
Summary: Compact View mode has a wrong layout in RTL mode
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: compact mode (other bugs)
Version First Reported In: 24.02.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-03-19 18:10 UTC by popov895
Modified: 2024-03-27 10:28 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Compact View mode in RTL (118.44 KB, image/png)
2024-03-19 18:10 UTC, popov895
Details

Note You need to log in before you can comment on or make changes to this bug.
Description popov895 2024-03-19 18:10:56 UTC
Created attachment 167479 [details]
Compact View mode in RTL

SUMMARY

I don't actually use RTL mode, but I'm pretty sure that Compact View mode has a wrong layout in this mode. As you can see in the attached screenshot, in RTL mode, the content of the columns is aligned to the left and bottom, while it should be aligned to the top and right. Also, the sort order is inverted.

STEPS TO REPRODUCE

1. Run Dolphin with the "--reversed" argument

SOFTWARE/OS VERSIONS

Operating System: KDE neon 6.0
KDE Plasma Version: 6.0.2
KDE Frameworks Version: 6.0.0
KDE Gear Version: 24.02.0
Qt Version: 6.6.2
Kernel Version: 6.5.0-21-generic (64-bit)
Graphics Platform: Wayland
Comment 1 Bug Janitor Service 2024-03-24 11:03:25 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/742
Comment 2 Méven Car 2024-03-27 10:28:26 UTC
Git commit 240d33ce17fc531e8bc6638af8f71454fe7c05e6 by Méven Car, on behalf of Eugene Popov.
Committed on 27/03/2024 at 10:28.
Pushed by meven into branch 'master'.

Better support for RTL

This MR fixes some issues related to RTL scripts:
- wrong layout in Compact View mode
- broken horizontal scrolling in Icon View and Details View modes
- broken navigation with left and right arrow keys in Details View mode
Related: bug 449493

M  +5    -0    src/kitemviews/kitemlistcontainer.cpp
M  +39   -23   src/kitemviews/kitemlistcontroller.cpp
M  +4    -0    src/kitemviews/kitemlistview.cpp
M  +10   -3    src/kitemviews/kstandarditemlistwidget.cpp
M  +20   -10   src/kitemviews/private/kitemlistviewlayouter.cpp
M  +1    -1    src/tests/kitemlistcontrollertest.cpp

https://invent.kde.org/system/dolphin/-/commit/240d33ce17fc531e8bc6638af8f71454fe7c05e6